--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html, body {
     margin: 0;
     padding: 0;
+    text-align: center;
   }
 .game{
-  width:75%;
-  justify-content: center;
+  text-align: center;
 }
 .heading{
   text-align: center;
