change in color

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ html, body {
     margin: 0;
     padding: 0;
     text-align: center;
+    background-color: rgba(75, 176, 235, 0.589);
+    color: gold;
   }
 .game{
   text-align: center;
