--- a/style.css
+++ b/style.css
@@ -11,3 +11,7 @@ html, body {
 .heading{
   text-align: center;
 }
+.heading h1{
+  text-align: center;
+  font-family: 'Permanent Marker', cursive;
+}
