change in color font

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
     text-align: center;
     background-color: rgba(75, 176, 235, 0.589);
-    color: gold;
+    color: black;
   }
 .game{
   text-align: center;
