change in background color again

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
     color: black;
   }
 html{
-  background-color: rgba(75, 176, 235, 0.589);
+  background-color:lightblue;
 }
 .game{
   text-align: center;
